syntax = "proto3";

package qa.grpc.rangiffler;

option java_multiple_files = true;
option java_package = "qa.grpc.rangiffler";
option java_outer_classname = "RangifflerProto";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service UserService {
  rpc GetUser(GetUserNameRequest) returns (UserResponse) {}
  rpc GetUsers(google.protobuf.Empty) returns (UsersResponse) {}
  rpc GetFriends(UserResponse) returns (UsersResponse) {}
  rpc getOutcomeInvitation(UserResponse) returns (UsersResponse) {}
  rpc getIncomeInvitation(UserResponse) returns (UsersResponse) {}
  rpc SendFriendshipInvitation(FriendshipAction) returns (UserResponse) {}
  rpc AcceptFriendshipInvitation(FriendshipAction) returns (UserResponse) {}
  rpc DeclineFriendshipInvitation(FriendshipAction) returns (UserResponse) {}
  rpc RemoveFriend(FriendshipAction) returns (google.protobuf.Empty) {}
}

message GetUserNameRequest{
  string username = 2;
  reserved 1;
}

message UsersResponse {
  repeated UserResponse userResponse = 1;
}

message UserResponse {
  string id = 1;
  string firstname = 2;
  bytes avatar = 3;
  FriendshipStatus friendStatus = 4;
  repeated Friendship friendship = 5;
  Country location = 6;
  string surname = 7;
}

message Friendship {
  string requester = 1;
  string addressee = 2;
  google.protobuf.Timestamp date = 3;
  FriendshipStatus friendStatus = 4;
}

message Country {
  string id = 1;
  string code = 2;
  string name = 3;
  bytes flag = 4;
}

message FriendshipAction {
  string targetUser = 1;
  string requestSender = 2;

}

enum FriendshipStatus {
  UNKNOWN = 0;
  PENDING = 1;
  ACCEPTED = 2;
}